--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- SECURITY: Forces HTTPS -->
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     
-    <title>VICTUS | Cyberpunk Luxury</title>
+    <title>VICTUS | DO ANYTHING </title>
     
     <!-- Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -1381,4 +1381,5 @@
         }
     </script>
 </body>
+
 </html>
